--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -28,7 +28,7 @@
 
 .content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   width: 600px;
   height: 100%;
   padding: 88px 10px;
@@ -81,18 +81,8 @@
   display: flex;
   align-items: center;
   gap: 10px;
-}
-
-.featureText {
   font-size: 14px;
   font-weight: 400;
-  line-height: 21px;
-  color: var(--white);
-}
-
-.highlights {
-  font-size: 14px;
-  font-weight: 700;
   line-height: 21px;
   color: var(--white);
 }
@@ -128,11 +118,7 @@
     width: 100%;
   }
 
-  .featureText {
-    font-size: 10px;
-  }
-
-  .highlights {
+  .feature {
     font-size: 10px;
   }
 
@@ -179,7 +165,7 @@
 
   .mainTitle {
     font-size: 24px;
-    line-height: 19.8px;
+    line-height: 20px;
     font-weight: 400;
     position: relative;
     margin-bottom: 20px;
@@ -204,24 +190,22 @@
     font-size: 10px;
     min-width: 18px;
     min-height: 18px;
+    color: var(--white);
   }
 
-  .featureText {
+  .feature {
     color: var(--blue);
     text-align: justify;
     font-size: 10px;
     white-space: nowrap;
   }
 
-  .highlights {
-    color: var(--blue);
-  }
 }
 
 @media (max-width: 480px) {
   .mainTitle {
     font-size: 20px;
-    line-height: 19.8px;
+    line-height: 20px;
     font-weight: 400;
   }
 
@@ -238,7 +222,7 @@
     font-size: 10px;
   }
 
-  .featureText {
+  .feature {
     font-size: 10px;
   }
 
