--- a/components/UI/YellowButton/YellowButton.module.scss
+++ b/components/UI/YellowButton/YellowButton.module.scss
@@ -13,27 +13,38 @@
   text-decoration: none;
 
   &--sm {
-    padding: 10px 19px;
-    font-size: 14px;
+    padding: 10px 24px;
+    gap: 5px;
+    font-size: 10px;
+    font-weight: 500;
+    line-height: 12px;
+    letter-spacing: 1px;
+    height: 45px;
   }
 
   &--md {
-    padding: 10px 19px;
-    font-size: 16px;
+    padding: 10px 48px;
+    gap: 12px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    height: 59px;
   }
 
   &--lg {
-    padding: 10px 19px;
+    padding: 10px 80px;
+    gap: 12px;
     font-size: 18px;
-    font-weight: 500;
+    font-weight: 600;
+    line-height: 22px;
     letter-spacing: 2px;
+    height: 90px;
   }
 
   &__icon {
-    margin-left: 4px; 
-    display: flex; 
-    align-items: center; 
-}
+    display: flex;
+    align-items: center;
+  }
 
   &__label {
     font-size: inherit;
@@ -46,6 +57,34 @@
   }
 
   &:hover:not(:disabled) {
-    background-color: var(--yellow-hover); 
+    background-color: var(--yellow-hover);
+  }
+
+  @media (max-width: 1024px) {
+    &--md {
+      padding: 8px 32px;
+      font-size: 12px;
+      height: 50px;
+    }
+
+    &--lg {
+      padding: 8px 40px;
+      font-size: 14px;
+      height: 70px;
+    }
+  }
+
+  @media (max-width: 480px) {
+    &--md {
+      padding: 8px 20px;
+      font-size: 10px;
+      height: 40px;
+    }
+
+    &--lg {
+      padding: 8px 30px;
+      font-size: 12px;
+      height: 43px;
+    }
   }
 }
