--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .root {
-    padding: 70px 0 110px;
+    padding: 70px;
     background-color: #3F4E65;
     color: #ffffff;
 }
@@ -26,7 +26,7 @@
 
     margin-top: 15px;
 }
-.appeal {
+.sales {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
@@ -66,6 +66,34 @@
     border-radius: 50%;
 }
 
+
+.downloadButton {
+    background-color: #fec85e;
+    color: #fff;
+    border: none;
+    padding: 15px 30px;
+    border-radius: 30px;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.buttonContent {
+    display: flex;
+    align-items: center;
+}
+
+
+
+.price {
+    margin-right: 10px;
+}
+
+
+
+
 /* 2 Колонна */
 .menu_column {
     display: flex;
@@ -74,18 +102,27 @@
 }
 .title {
     font-size: 20px;
-    font-weight: 600;
-    line-height: 30px;
 }
 .list {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 21px;
+    gap: 16px;
+    list-style-type: none;
+    padding: 0;
 }
 
+.listItem {
+    font-size: 20px; /* Размер шрифта для элемента списка */
+}
+
+.listItem a {
+    color: white; /* Устанавливает цвет текста ссылок белым */
+    text-decoration: none; /* Убирает подчеркивание у ссылок */
+}
+
+.listItem a:hover {
+    text-decoration: underline; /* Подчеркивание при наведении (по желанию) */
+}
 
 
 /* 3 Колонна */
@@ -114,9 +151,8 @@
     transition: all ease 0.4s;
 }
 
-.--not-active {
-    display: none;
-}
+
+
 .price {
     font-size: 14px;
     font-weight: 700;
@@ -140,8 +176,6 @@
     text-decoration: underline;
 }
 
-
-
 .languageButton {
     padding-top: 12px;
     background: none;
@@ -156,3 +190,72 @@
     font-weight: bold;
     color: #fff;
 }
+
+
+
+
+@media (max-width: 950px) {
+    .container {
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 788px) {
+    .root {
+        padding: 20px 0;
+    }
+    .download_column {
+        order: 1;
+    }
+    .company {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        flex-basis: 100%;
+    }
+    .description,
+    .price-button,
+    .subscribe {
+        margin-top: 0;
+    }
+
+}
+
+@media (max-width: 440px) {
+    .root {
+        padding: 0;
+    }
+    .container {
+        padding: 15px;
+        column-gap: 15px;
+        row-gap: 25px;
+    }
+    .company {
+        height: auto;
+        gap: 15px;
+    }
+    .logo img {
+        height: 40px;
+    }
+    .price-button {
+        width: auto;
+        padding: 12px 30px;
+        gap: 5px;
+    }
+    .price,
+    .description {
+        font-size: 12px;
+        line-height: 18px;
+    }
+    .subscribe {
+        flex-basis: 100%;
+    }
+    .menu {
+        gap: 20px;
+    }
+
+
+}
+
+
