--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -13,9 +13,14 @@
 
 .header {
   position: relative;
-  width: 100%;
+  width: 1920px;
   height: 170px;
   background-color: #FFFFFF;
+  max-width: 1920px;
+  min-width: 1920px;
+  max-height: 170px;
+  margin: auto;
+  transform-origin: center center;
 }
 
 .menuRect{
