--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -3,6 +3,7 @@
     background-color: #3F4E65;
     color: #ffffff;
 }
+
 .container {
     display: flex;
     justify-content: space-between;
@@ -19,6 +20,7 @@
     height: 300px;
     flex-basis: 320px;
 }
+
 .description {
     font-size: 16px;
     font-weight: 400;
@@ -26,16 +28,17 @@
 
     margin-top: 15px;
 }
+
 .sales {
     display: flex;
     flex-grow: 1;
     flex-direction: column;
     justify-content: flex-end;
-
     font-size: 12px;
     font-weight: 400;
     line-height: 18px;
 }
+
 .subscribe {
     display: flex;
     justify-content: space-between;
@@ -50,11 +53,13 @@
     border-radius: 36px;
     overflow: hidden;
 }
+
 .input {
     font-size: 12px;
     font-weight: 400;
     line-height: 18px;
 }
+
 .button {
     display: flex;
     justify-content: center;
@@ -65,7 +70,6 @@
     width: 40px;
     border-radius: 50%;
 }
-
 
 .downloadButton {
     background-color: #fec85e;
@@ -85,13 +89,9 @@
     align-items: center;
 }
 
-
-
 .price {
     margin-right: 10px;
 }
-
-
 
 
 /* 2 Колонна */
@@ -100,9 +100,11 @@
     flex-direction: column;
     gap: 25px;
 }
+
 .title {
     font-size: 20px;
 }
+
 .list {
     display: flex;
     flex-direction: column;
@@ -112,31 +114,32 @@
 }
 
 .listItem {
-    font-size: 20px; /* Размер шрифта для элемента списка */
+    font-size: 20px;
 }
 
 .listItem a {
-    color: white; /* Устанавливает цвет текста ссылок белым */
-    text-decoration: none; /* Убирает подчеркивание у ссылок */
+    color: white;
+    text-decoration: none;
 }
 
 .listItem a:hover {
-    text-decoration: underline; /* Подчеркивание при наведении (по желанию) */
+    text-decoration: underline;
 }
 
 
-/* 3 Колонна */
+
 .categories_column {
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
 
-/* 4 Колонна */
+
 .download_column {
     display: flex;
     flex-direction: column;
 }
+
 .price-button {
     display: flex;
     align-items: center;
@@ -152,7 +155,6 @@
 }
 
 
-
 .price {
     font-size: 14px;
     font-weight: 700;
@@ -165,14 +167,14 @@
     margin-top: 15px;
 }
 
-/* 5 Колонна */
+
 .contacts {
     display: flex;
     flex-direction: column;
     gap: 5px;
 }
 
-.orderCall{
+.orderCall {
     text-decoration: underline;
 }
 
@@ -185,28 +187,27 @@
     cursor: pointer;
     gap: 8px;
 }
+
 .languageText {
     font-size: 16px;
     font-weight: bold;
     color: #fff;
 }
 
-
-
-
-@media (max-width: 950px) {
-    .container {
-        justify-content: space-between;
-    }
+.titleMessengers {
+    padding-top: 12px;
 }
+
 
 @media (max-width: 788px) {
     .root {
         padding: 20px 0;
     }
+
     .download_column {
         order: 1;
     }
+
     .company {
         flex-direction: row;
         flex-wrap: wrap;
@@ -214,47 +215,82 @@
         justify-content: space-between;
         flex-basis: 100%;
     }
+
+    .near {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sales {
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 18px;
+        margin-bottom: 5px;
+    }
+
+    .price-button {
+        width: auto;
+        padding: 12px 30px;
+        gap: 5px;
+    }
+
     .description,
     .price-button,
     .subscribe {
         margin-top: 0;
     }
 
+    .downloadButton {
+        margin-left: 10px;
+    }
+
 }
 
-@media (max-width: 440px) {
+@media (max-width: 480px) {
     .root {
         padding: 0;
     }
+
     .container {
         padding: 15px;
         column-gap: 15px;
         row-gap: 25px;
     }
+
     .company {
-        height: auto;
-        gap: 15px;
+        display: flex;
+        align-items: center;
+        flex-direction: row;
     }
+
+    .downloadButton {
+        margin-left: 10px;
+    }
+
     .logo img {
         height: 40px;
     }
+
     .price-button {
         width: auto;
         padding: 12px 30px;
         gap: 5px;
     }
+
     .price,
     .description {
         font-size: 12px;
         line-height: 18px;
     }
+
     .subscribe {
         flex-basis: 100%;
     }
+
     .menu {
         gap: 20px;
     }
-
 
 }
 
