--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,22 +1,19 @@
-.root {
-    padding: 70px;
-    background-color: #3F4E65;
-    color: #ffffff;
-}
-
 .container {
+    padding: 70px;
+    background-color:var(--blue);
+    color: var(--white);
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     column-gap: 30px;
     row-gap: 50px;
+    width: 100%;
 }
 
 /* 1 Колонна */
 .company {
     display: flex;
     flex-direction: column;
-
     height: 300px;
     flex-basis: 320px;
 }
@@ -25,7 +22,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
-
     margin-top: 15px;
 }
 
@@ -43,13 +39,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     height: 60px;
     width: 280px;
     padding: 0 10px 0 20px;
     margin-top: 15px;
-
-    background-color: #ffffff;
+    background-color: var(--white);
     border-radius: 36px;
     overflow: hidden;
 }
@@ -69,24 +63,6 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
-}
-
-.downloadButton {
-    background-color: #fec85e;
-    color: #fff;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 30px;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-}
-
-.buttonContent {
-    display: flex;
-    align-items: center;
 }
 
 .price {
@@ -116,7 +92,7 @@
 }
 
 .listItem a {
-    color: white;
+    color: var(--white);
     text-decoration: none;
 }
 
@@ -124,13 +100,11 @@
     text-decoration: underline;
 }
 
-
 .categories_column {
     display: flex;
     flex-direction: column;
     gap: 25px;
 }
-
 
 .download_column {
     display: flex;
@@ -141,16 +115,12 @@
     display: flex;
     align-items: center;
     gap: 12px;
-
     width: 215px;
     padding: 20px 50px;
     margin-top: 25px;
-
     border-radius: 80px;
-
     transition: all ease 0.4s;
 }
-
 
 .price {
     font-size: 14px;
@@ -175,6 +145,17 @@
     text-decoration: underline;
 }
 
+.contactsContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.gap {
+    height: 12px;
+}
+
+
 .languageButton {
     padding-top: 12px;
     background: none;
@@ -188,19 +169,14 @@
 .languageText {
     font-size: 16px;
     font-weight: bold;
-    color: #fff;
+    color: var(--white);
 }
 
 .titleMessengers {
     padding-top: 12px;
 }
 
-
-@media (max-width: 788px) {
-    .root {
-        padding: 20px 0;
-    }
-
+@media (max-width: 768px) {
     .download_column {
         order: 1;
     }
@@ -241,14 +217,9 @@
     .downloadButton {
         margin-left: 10px;
     }
-
 }
 
 @media (max-width: 480px) {
-    .root {
-        padding: 0;
-    }
-
     .container {
         padding: 15px;
         column-gap: 15px;
@@ -288,7 +259,51 @@
     .menu {
         gap: 20px;
     }
-
 }
+
+
+@media (max-width: 1280px) {
+    .download_column {
+        order: 1;
+    }
+
+    .company {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+        flex-basis: 100%;
+    }
+
+    .near {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .sales {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 20px;
+        margin-bottom: 8px;
+    }
+
+    .price-button {
+        width: auto;
+        padding: 10px 25px;
+        gap: 8px;
+    }
+
+    .description,
+    .price-button,
+    .subscribe {
+        margin-top: 10px;
+    }
+
+    .downloadButton {
+        margin-left: 15px;
+    }
+}
+
 
 
