--- a/components/ProductCard/ProductDetails.module.css
+++ b/components/ProductCard/ProductDetails.module.css
@@ -1,176 +1,228 @@
 .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    max-width: 1366px;
-    margin: 0 auto;
-    font-family: var(--font-inter);
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1366px;
+  margin: 0 auto;
+  font-family: var(--font-inter);
+}
+
 .productDetails {
-    display: flex;
-    gap: 20px;
-    padding: 20px;
-    width: 100%;
-    background-color: burlywood;
-  }
-  
-  .imageSection {
-    flex: 1;
-    background-color: aqua;
-  }
-  
-  .productImage {
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .infoSection {
-    flex: 2;
-  }
-  
-  .inStock {
-    margin: 20px 0 10px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-    color: var(--green);
-    font-weight: bold;
-  }
-  
-  .productTitle {
-    font-size: 30px;
-    font-weight: 500;
-    line-height: 45px;
-    color: var(--black);
-  }
+  display: flex;
+  width: 100%;
+  padding: 20px;
+  background-color: burlywood;
+}
 
-  .productBrand {
-    font-weight: 800;
-  }
-  
-  .productVolume {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-    font-size: 12px;
-    font-weight: 400;
-    color: var(--blue);
-    margin-bottom: 5px;
-  }
-  
-  .volumeType {
-    opacity: 0.3;
-  }
-  
-  .priceContainer {
-    display: flex;
-    align-items: center;
-    gap: 40px;
-    margin: 10px 0 40px;
-    background-color: crimson;
-  }
+.imageSection {
+  flex: 1;
+  max-width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: start;
+  background-color: aqua;
+}
 
-  .productPrice {
-    font-size: 30px;
-    font-weight: 800;
-    line-height: 39px;
-    color: var(--black);
-  }
-  
-  .quantityContainer {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: row;
-    gap: 12px;
-  }
-  .quantityButton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 12px;
-    width: 34px;
-    height: 23px;
-    border-radius: 40px;
-    border:0px;
-    background: linear-gradient(90deg, rgba(255, 198, 80, 0.3) 0%, rgba(254, 202, 110, 0.3) 97.25%);
-    cursor: pointer;
-  }
-  
-  .quantity {
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 18px;
-  }
-  
-  .addToCart {
-    background-color: orange;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .freeShipping {
-    color: #888;
-    margin-top: 10px;
-  }
-  
-  .actions {
-    display: flex;
-    gap: 15px;
-    margin-top: 10px;
-  }
-  
-  .shareButton, .priceListButton {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    background-color: #f0f0f0;
-    padding: 8px 16px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
-  }
-  
-  .characteristicsList {
-    margin-top: 20px;
-    font-size: 14px;
-    font-weight: 800;
-    color:darkmagenta;
-  }
-  .characteristics {
-    color:brown;
-    font-weight: 400;
-  }
-  
-  
-  .description {
-    width: 300px; /* фиксированная ширина */
-    max-width: 100%; /* чтобы не выходить за пределы экрана */
-  }
-  
-  .descriptionTitle {
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-  }
-  
-  .descriptionTitle span {
-    margin-left: 8px; /* расположение треугольника рядом с текстом */
-  }
-  
-  .descriptionText {
-    margin-top: 10px;
-    padding: 0 10px;
-    overflow: hidden;
-  }
+.productImage {
+  width: 100%;
+  height: auto;
+}
 
-  .divider {
-    border-top: 1px dashed rgba(63, 78, 101, 0.5); /* Пунктирная линия */
-    margin: 10px 0; /* Отступ сверху и снизу от линии */
-    width: 40%;
-  }
-  
-  
+.infoSection {
+  flex: 1;
+  max-width: 50%;
+  padding: 20px;
+}
+
+.inStock {
+  margin: 0 0 10px;
+  font-size: 14px;
+  font-weight: 100;
+  line-height: 18px;
+  color: var(--green);
+  font-weight: bold;
+}
+
+.productTitle {
+  font-size: 30px;
+  font-weight: 500;
+  line-height: 45px;
+  color: var(--black);
+}
+
+.productBrand {
+  font-weight: 800;
+}
+
+.productVolume {
+  display: flex;
+  align-items: center;
+  gap: 2px;
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--blue);
+  margin-bottom: 5px;
+}
+
+.volumeType {
+  opacity: 0.3;
+}
+
+.priceContainer {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  margin: 10px 0 40px;
+  background-color: crimson;
+}
+
+.productPrice {
+  font-size: 30px;
+  font-weight: 800;
+  line-height: 39px;
+  color: var(--black);
+}
+
+.quantityContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 12px;
+}
+
+.quantityButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  width: 34px;
+  height: 23px;
+  border-radius: 40px;
+  border: 0px;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 198, 80, 0.3) 0%,
+    rgba(254, 202, 110, 0.3) 97.25%
+  );
+  cursor: pointer;
+}
+
+.quantity {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 18px;
+}
+
+.actions {
+  display: flex;
+  gap: 15px;
+  margin-top: 10px;
+  background-color: greenyellow;
+  width: 100%;
+}
+
+.freeShipping {
+  color: var(--blue);
+  padding: 20px 35px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
+  background-color: darkgoldenrod;
+}
+
+.freeShipping span {
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 18px;
+}
+
+.shareButton,
+.priceListButton {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  padding: 20px 30px;
+  border: none;
+  cursor: pointer;
+  color: var(--blue);
+  background: rgba(255, 255, 255, 0);
+}
+
+.priceListButton {
+  width: 40%;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+}
+
+.characteristicsList {
+  margin-top: 56px;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 21px;
+  color: var(--blue);
+  background-color: lightcoral;
+}
+
+.characteristics {
+  color: var(--black);
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+}
+
+.description {
+  background-color: lightsteelblue;
+  margin-top: 30px;
+  width: 100%;
+  max-width: 100%;
+}
+
+.descriptionTitle {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--black);
+}
+
+.descriptionTitle span {
+  margin-left: 2px;
+  font-size: 20px;
+  margin-top: 4px;
+}
+
+.descriptionText {
+  margin-top: 15px;
+  overflow: hidden;
+  font-size: 12px;
+  font-weight: 300;
+  line-height: 18px;
+  color: var(--blue);
+}
+
+.divider {
+  border-top: 1px dashed rgba(63, 78, 101, 0.3);
+  margin: 20px 0;
+  width: 40%;
+}
+
+.webWeaversGame {
+  width: 100%;
+  height: 200px;
+}
+
+.webWeavers {
+  color: var(--black);
+  position: relative;
+  cursor: pointer;
+  transition:
+    transform 0.3s ease,
+    top 0.3s ease,
+    left 0.3s ease;
+  font-size: 16px;
+}
