--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,294 +1,285 @@
 .root {
-    padding: 70px;
-    background-color: #3F4E65;
-    color: #ffffff;
+  padding: 70px;
+  background-color: #3f4e65;
+  color: #ffffff;
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    column-gap: 30px;
-    row-gap: 50px;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  column-gap: 30px;
+  row-gap: 50px;
 }
 
 /* 1 Колонна */
 .company {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    height: 300px;
-    flex-basis: 320px;
+  height: 300px;
+  flex-basis: 320px;
 }
 
 .description {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
 
-    margin-top: 15px;
+  margin-top: 15px;
 }
 
 .sales {
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
-    justify-content: flex-end;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: flex-end;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 .subscribe {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
-    height: 60px;
-    width: 280px;
-    padding: 0 10px 0 20px;
-    margin-top: 15px;
+  height: 60px;
+  width: 280px;
+  padding: 0 10px 0 20px;
+  margin-top: 15px;
 
-    background-color: #ffffff;
-    border-radius: 36px;
-    overflow: hidden;
+  background-color: #ffffff;
+  border-radius: 36px;
+  overflow: hidden;
 }
 
 .input {
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 18px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
 }
 
 .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-    font-weight: 500;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 30px;
+  font-weight: 500;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
 }
 
 .downloadButton {
-    background-color: #fec85e;
-    color: #fff;
-    border: none;
-    padding: 15px 30px;
-    border-radius: 30px;
-    font-weight: bold;
-    font-size: 18px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
+  background-color: #fec85e;
+  color: #fff;
+  border: none;
+  padding: 15px 30px;
+  border-radius: 30px;
+  font-weight: bold;
+  font-size: 18px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
 }
 
 .buttonContent {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .price {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 .menu_column {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .title {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .list {
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    list-style-type: none;
-    padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  list-style-type: none;
+  padding: 0;
 }
 
 .listItem {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .listItem a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .listItem a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
-
 
 .categories_column {
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
-
 .download_column {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .price-button {
-    display: flex;
-    align-items: center;
-    gap: 12px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
 
-    width: 215px;
-    padding: 20px 50px;
-    margin-top: 25px;
+  width: 215px;
+  padding: 20px 50px;
+  margin-top: 25px;
 
-    border-radius: 80px;
+  border-radius: 80px;
 
-    transition: all ease 0.4s;
+  transition: all ease 0.4s;
 }
 
-
 .price {
-    font-size: 14px;
-    font-weight: 700;
-    line-height: 17px;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
 }
 
 .messengers {
-    display: flex;
-    gap: 10px;
-    margin-top: 15px;
+  display: flex;
+  gap: 10px;
+  margin-top: 15px;
 }
 
-
 .contacts {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .orderCall {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
 .languageButton {
-    padding-top: 12px;
-    background: none;
-    border: none;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 8px;
+  padding-top: 12px;
+  background: none;
+  border: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 8px;
 }
 
 .languageText {
-    font-size: 16px;
-    font-weight: bold;
-    color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
 }
 
 .titleMessengers {
-    padding-top: 12px;
+  padding-top: 12px;
 }
 
-
 @media (max-width: 788px) {
-    .root {
-        padding: 20px 0;
-    }
+  .root {
+    padding: 20px 0;
+  }
 
-    .download_column {
-        order: 1;
-    }
+  .download_column {
+    order: 1;
+  }
 
-    .company {
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-between;
-        flex-basis: 100%;
-    }
+  .company {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    flex-basis: 100%;
+  }
 
-    .near {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .near {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .sales {
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 18px;
-        margin-bottom: 5px;
-    }
+  .sales {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 18px;
+    margin-bottom: 5px;
+  }
 
-    .price-button {
-        width: auto;
-        padding: 12px 30px;
-        gap: 5px;
-    }
+  .price-button {
+    width: auto;
+    padding: 12px 30px;
+    gap: 5px;
+  }
 
-    .description,
-    .price-button,
-    .subscribe {
-        margin-top: 0;
-    }
+  .description,
+  .price-button,
+  .subscribe {
+    margin-top: 0;
+  }
 
-    .downloadButton {
-        margin-left: 10px;
-    }
-
+  .downloadButton {
+    margin-left: 10px;
+  }
 }
 
 @media (max-width: 480px) {
-    .root {
-        padding: 0;
-    }
+  .root {
+    padding: 0;
+  }
 
-    .container {
-        padding: 15px;
-        column-gap: 15px;
-        row-gap: 25px;
-    }
+  .container {
+    padding: 15px;
+    column-gap: 15px;
+    row-gap: 25px;
+  }
 
-    .company {
-        display: flex;
-        align-items: center;
-        flex-direction: row;
-    }
+  .company {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+  }
 
-    .downloadButton {
-        margin-left: 10px;
-    }
+  .downloadButton {
+    margin-left: 10px;
+  }
 
-    .logo img {
-        height: 40px;
-    }
+  .logo img {
+    height: 40px;
+  }
 
-    .price-button {
-        width: auto;
-        padding: 12px 30px;
-        gap: 5px;
-    }
+  .price-button {
+    width: auto;
+    padding: 12px 30px;
+    gap: 5px;
+  }
 
-    .price,
-    .description {
-        font-size: 12px;
-        line-height: 18px;
-    }
+  .price,
+  .description {
+    font-size: 12px;
+    line-height: 18px;
+  }
 
-    .subscribe {
-        flex-basis: 100%;
-    }
+  .subscribe {
+    flex-basis: 100%;
+  }
 
-    .menu {
-        gap: 20px;
-    }
-
+  .menu {
+    gap: 20px;
+  }
 }
-
-
