--- a/components/ProductCard/ProductDetails.module.css
+++ b/components/ProductCard/ProductDetails.module.css
@@ -11,16 +11,14 @@
   display: flex;
   width: 100%;
   padding: 20px;
-  background-color: burlywood;
 }
 
 .imageSection {
-  flex: 1;
-  max-width: 50%;
   display: flex;
   justify-content: center;
   align-items: start;
-  background-color: aqua;
+  flex: 1;
+  max-width: 50%;
 }
 
 .productImage {
@@ -37,10 +35,9 @@
 .inStock {
   margin: 0 0 10px;
   font-size: 14px;
-  font-weight: 100;
+  font-weight: bold;
   line-height: 18px;
   color: var(--green);
-  font-weight: bold;
 }
 
 .productTitle {
@@ -57,11 +54,11 @@
 .productVolume {
   display: flex;
   align-items: center;
-  gap: 2px;
+  gap: 4px;
+  margin-bottom: 5px;
   font-size: 12px;
   font-weight: 400;
   color: var(--blue);
-  margin-bottom: 5px;
 }
 
 .volumeType {
@@ -73,7 +70,6 @@
   align-items: center;
   gap: 40px;
   margin: 10px 0 40px;
-  background-color: crimson;
 }
 
 .productPrice {
@@ -95,17 +91,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
   width: 34px;
   height: 23px;
   border-radius: 40px;
   border: 0px;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 198, 80, 0.3) 0%,
-    rgba(254, 202, 110, 0.3) 97.25%
-  );
+  font-size: 12px;
+  background-color: rgba(255, 198, 80, 0.3);
   cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
+}
+
+.quantityButton:hover {
+  background-color: rgba(255, 198, 80, 1);
 }
 
 .quantity {
@@ -118,17 +115,15 @@
   display: flex;
   gap: 15px;
   margin-top: 10px;
-  background-color: greenyellow;
   width: 100%;
 }
 
 .freeShipping {
-  color: var(--blue);
-  padding: 20px 35px;
   font-size: 12px;
   font-weight: 400;
   line-height: 18px;
-  background-color: darkgoldenrod;
+  color: var(--blue);
+  padding: 20px 35px;
 }
 
 .freeShipping span {
@@ -145,36 +140,38 @@
   gap: 12px;
   padding: 20px 30px;
   border: none;
-  cursor: pointer;
-  color: var(--blue);
-  background: rgba(255, 255, 255, 0);
-}
-
-.priceListButton {
   width: 40%;
   font-size: 14px;
   font-weight: 700;
   line-height: 17px;
+  color: var(--blue);
+  background: rgba(255, 255, 255, 0);
+  cursor: pointer;
+  opacity: 1;
+  transition: opacity 0.2s ease-in-out;
+}
+
+.shareButton:hover,
+.priceListButton:hover {
+  opacity: 0.8;
 }
 
 .characteristicsList {
-  margin-top: 56px;
   font-size: 14px;
   font-weight: 300;
   line-height: 21px;
   color: var(--blue);
-  background-color: lightcoral;
+  margin-top: 36px;
 }
 
 .characteristics {
-  color: var(--black);
   font-size: 14px;
   font-weight: 500;
-  line-height: 21px;
+  line-height: 24px;
+  color: var(--black);
 }
 
 .description {
-  background-color: lightsteelblue;
   margin-top: 30px;
   width: 100%;
   max-width: 100%;
@@ -183,17 +180,23 @@
 .descriptionTitle {
   display: flex;
   align-items: center;
-  cursor: pointer;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
   color: var(--black);
+  cursor: pointer;
+  transition: color 0.2s ease-in-out;
+  width: 120px;
+}
+
+.descriptionTitle:hover {
+  color: var(--yellow-hover);
 }
 
 .descriptionTitle span {
   margin-left: 2px;
-  font-size: 20px;
   margin-top: 4px;
+  font-size: 20px;
 }
 
 .descriptionText {
@@ -206,9 +209,9 @@
 }
 
 .divider {
-  border-top: 1px dashed rgba(63, 78, 101, 0.3);
   margin: 20px 0;
   width: 40%;
+  border-top: 1px dashed rgba(63, 78, 101, 0.3);
 }
 
 .webWeaversGame {
@@ -217,12 +220,13 @@
 }
 
 .webWeavers {
-  color: var(--black);
   position: relative;
+  font-size: 16px;
+  color: var(--black);
   cursor: pointer;
+  width: 120px;
   transition:
     transform 0.3s ease,
     top 0.3s ease,
     left 0.3s ease;
-  font-size: 16px;
 }
