--- a/components/ProductCard/ProductDetails.module.css
+++ b/components/ProductCard/ProductDetails.module.css
@@ -3,14 +3,13 @@
   justify-content: center;
   align-items: center;
   max-width: 1366px;
-  margin: 0 auto;
+  margin: 0 auto 80px;
   font-family: var(--font-inter);
 }
 
 .productDetails {
   display: flex;
   width: 100%;
-  padding: 20px;
 }
 
 .imageSection {
@@ -34,6 +33,7 @@
 
 .inStock {
   margin: 0 0 10px;
+  width: 120px;
   font-size: 14px;
   font-weight: bold;
   line-height: 18px;
@@ -70,6 +70,24 @@
   align-items: center;
   gap: 40px;
   margin: 10px 0 40px;
+}
+
+.shareButton1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
+  padding: 20px 30px;
+  border: none;
+  width: 16%;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+  color: var(--blue);
+  background: rgba(255, 255, 255, 0);
+  cursor: pointer;
+  opacity: 1;
+  display: none;
 }
 
 .productPrice {
@@ -217,6 +235,7 @@
 .webWeaversGame {
   width: 100%;
   height: 200px;
+  background-color: azure;
 }
 
 .webWeavers {
@@ -229,4 +248,169 @@
     transform 0.3s ease,
     top 0.3s ease,
     left 0.3s ease;
+}
+
+@media (max-width: 1280px) {
+  .container {
+    width: 95%;
+  }
+
+  .imageSection,
+  .infoSection {
+    max-width: 100%;
+    padding: 10px;
+  }
+
+  .productTitle {
+    font-size: 28px;
+    line-height: 42px;
+  }
+
+  .priceContainer {
+    gap: 30px;
+  }
+
+  .descriptionTitle {
+    font-size: 15px;
+    width: 100px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    width: 90%;
+  }
+
+  .productTitle {
+    font-size: 26px;
+    line-height: 40px;
+  }
+
+  .priceListButton {
+    width: 50%;
+    padding: 15px 25px;
+    font-size: 13px;
+  }
+
+  .descriptionTitle {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 85%;
+    margin: 0 auto 60px;
+  }
+  .productDetails {
+    flex-direction: column;
+  }
+
+  .quantityContainer,
+  .actions {
+    gap: 10px;
+    justify-content: space-between;
+  }
+
+  .priceContainer {
+    justify-content: space-between;
+    gap: 20px;
+    margin: 10px 0 30px;
+  }
+
+  .shareButton,
+  .priceListButton {
+    padding: 12px 20px;
+  }
+
+  .descriptionTitle {
+    font-size: 13px;
+    line-height: 20px;
+  }
+
+  .productVolume {
+    display: none;
+  }
+  .divider {
+    width: 100%;
+  }
+}
+
+@media (max-width: 480px) {
+  .container {
+    width: 90%;
+    margin: 0 auto 40px;
+  }
+  .priceContainer {
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: flex-start;
+  }
+
+  .productTitle {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  .productPrice {
+    font-size: 20px;
+    font-weight: 800;
+    line-height: 26px;
+  }
+
+  .shareButton1 {
+    display: block;
+    padding: 10px 8px;
+    margin: 0 auto;
+  }
+
+  .priceContainer > * {
+    flex: 0 0 auto;
+  }
+
+  .priceContainer > *:nth-child(1),
+  .priceContainer > *:nth-child(2) {
+    width: calc(50% - 50px);
+  }
+
+  .priceContainer > *:nth-child(3),
+  .priceContainer > *:nth-child(4) {
+    width: auto;
+  }
+
+  .productPrice {
+    font-size: 26px;
+    line-height: 36px;
+  }
+
+  .actions {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .shareButton {
+    display: none;
+  }
+
+  .priceListButton,
+  .freeShipping {
+    padding: 10px 15px;
+    font-size: 12px;
+  }
+
+  .description {
+    margin-top: 20px;
+  }
+
+  .divider {
+    margin: 15px 0;
+  }
+
+  .webWeaversGame {
+    height: 150px;
+  }
 }
